# unity-native-browser

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json
.agents/: android.md  build.md  conventions.md  overview.md  troubleshooting.md  unity.md  webgl.md  windows.md
.agents/guides/: ssh-signing-setup.md
.github/workflows/: android.yml  lint.yml  release.yml  windows.yml
Editor/: GradleTemplateValidator.cs  TedLiou.NativeBrowser.Editor.asmdef  WebGLPluginValidator.cs
Runtime/: Alignment.cs  BrowserConfig.cs  BrowserType.cs  NativeBrowser.cs  NativeBrowserCallbackReceiver.cs  TedLiou.NativeBrowser.asmdef
Runtime/Internal/: AssemblyInfo.cs  EditorBridge.cs  IPlatformBridge.cs  WebGLBridge.cs
Runtime/Plugins/Android/: NativeBrowser.aar
docs/: original-spec.md
docs/en/: ANDROID_INTERNALS.md  API.md  PROGUARD_RULES.md  README.md
docs/zh-tw/: ANDROID_INTERNALS.md  API.md  PROGUARD_RULES.md  README.md
src/android/: .gitignore  AGENTS.md  settings.gradle.kts
src/android/app/: build.gradle.kts  consumer-proguard-rules.pro  proguard-rules.pro
src/unity/: .gitignore  AGENTS.md  unity.slnx
src/windows/: Cargo.toml
src/windows/src/: callback.rs  config.rs  dpi.rs  error.rs  lib.rs  threading.rs  webview.rs  window.rs
tools/: build-windows.ps1  build.sh  check-webgl-build.ps1  clean.sh  copy-aar.sh  copy-dll.ps1  create-release.sh  deploy.sh  run-build-exe.ps1  run-editmode-tests.ps1  run-integration-test.ps1  run-playmode-tests.ps1  test-exe-webview.ps1  test-exe.ps1  test.sh  webgl-test-server.mjs  webgl-test-server.py
(+109 files in other folders)
