[package]
name = "native-browser-webview"
version = "1.0.0"
edition = "2021"
description = "Windows WebView2 native layer for Unity NativeBrowser plugin"

[lib]
name = "NativeBrowserWebView"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
webview2-com = "0.38"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
